syntax = "proto3";

option java_package = "com.github.denisbytes.javafootball.score_calculator.proto";
option java_outer_classname = "MatchServiceProto";

service MatchService {
  rpc GetMatches(GetMatchesRequest) returns (GetMatchesResponse);
}

message GetMatchesRequest {}

message GetMatchesResponse {
  repeated Match matches = 1;
}

message Match {
  string matchID = 1;
  string team1 = 2;
  string team2 = 3;
  repeated string comments = 4;
  int32 team1Goals = 5;
  int32 team2Goals = 6;
}
